Java9 ready